feat: add nameNepali to Department, create nepali-domain skill, add agent memory auto-load